# os_lab_6

./: README.md
src/: CMakeLists.txt  client.cpp  server.cpp
src/lib/: mq_tools.hpp
src/lib/src/: mq_tools.cpp
